# json-storage

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  readme
json-admin/: index.html  package-lock.json  package.json
json-admin/src/: main.tsx
json-admin/src/app/: router.tsx
json-admin/src/components/: Header.tsx
json-admin/src/pages/: HomePage.tsx  NamespacePage.tsx
json_storage/: bootstrap.py  container.py  depends.py  router.py  settings.py  tasks.py
json_storage/cmd/: rest.py  taskiq_broker.py
json_storage/repositories/: __init__.py  elastic_search.py  postgres.py
json_storage/schemas/: __init__.py  document.py  document_list.py
json_storage/services/: __init__.py  dsl_translator.py  jsonpath_parser.py  multi_repository_service.py
tests/: conftest.py  test_multi_repo.py
tests/fixtures/: db.py  taskiq.py
tests/test_elastic/: test_file_ops.py  test_index.py  test_index_to_elastic.py  test_mappings.py
tests/test_postgres/: test_defs.py  test_delete_chunks.py  test_init.py  test_read_streaming.py  test_write_streaming.py
tests/test_translator/: conftest.py  test_dsl_translator.py  test_jsonpath_parser.py  test_schema.json
